argocd/demos/guestbook/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-guestbook
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
